--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "body-parser": "^1.12.3",
     "express": "latest",
     "moment": "^2.10.2",
     "newrelic": "latest",
