--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "cookie-parser": "*",
+    "express-session": "*",
+    "bcrypt-nodejs": "*",
+    "passport": "*",
+    "passport-local": "*",
     "body-parser": "^1.12.3",
     "express": "latest",
     "moment": "^2.10.2",
     "newrelic": "latest",
     "pg": "4.x",
     "serve-favicon": "2.*",
-    "passport": "latest",
-    "ejs": "2.*"
+    "ejs": "2.*",
+    "bookshelf": "0.7.9",
+    "knex": "0.7.*"
   },
   "engines": {
     "node": "0.10.x"
