--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "passport": "*",
     "passport-local": "*",
     "body-parser": "^1.12.3",
+    "cookie-parser": "*",
     "express": "latest",
     "moment": "^2.10.2",
     "newrelic": "latest",
@@ -20,7 +21,8 @@
     "serve-favicon": "2.*",
     "ejs": "2.*",
     "bookshelf": "0.7.9",
-    "knex": "0.7.*"
+    "knex": "0.7.*",
+    "felixge/node-mysql": "2.6.*"
   },
   "engines": {
     "node": "0.10.x"
