--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "knex": "0.7.*",
     "mysql": "2.6.*",
     "redis": "0.12.*",
-    "connect-redis": "2.*"
+    "connect-redis": "2.*",
+    "nodemailer": "1.3.*",
+    "nodemailer-sendgrid-transport": "0.1.*"
   },
   "engines": {
     "node": "0.10.x"
